--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 Django==2.1.7
+django-filter==2.1.0
 djangorestframework==3.9.2
 gunicorn==19.9.0
+Markdown==3.0.1
 pytz==2018.9
+redis==3.2.0
+channels
