--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ Click==7.0
 constantly==15.1.0
 daphne==2.2.5
 Django==2.1.7
+django-cors-headers==2.4.1
 django-filter==2.1.0
 djangorestframework==3.9.2
 dnspython==1.16.0
