--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ channels-redis==2.3.3
 chardet==3.0.4
 Click==7.0
 constantly==15.1.0
+cycler==0.10.0
 daphne==2.2.5
 Django==2.1.7
 django-cors-headers==2.4.1
@@ -24,23 +25,36 @@ Flask==1.0.2
 Flask-SocketIO==3.3.1
 greenlet==0.4.15
 gunicorn==19.9.0
+h5py==2.9.0
 hiredis==1.0.0
 hyperlink==18.0.0
 idna==2.8
 incremental==17.5.0
 itsdangerous==1.1.0
 Jinja2==2.10
+Keras==2.2.4
+Keras-Applications==1.0.7
+Keras-Preprocessing==1.0.9
+kiwisolver==1.0.1
 kombu==4.4.0
 Markdown==3.0.1
 MarkupSafe==1.1.1
+matplotlib==3.0.3
 monotonic==1.5
 msgpack==0.6.1
+numpy==1.16.2
+pandas==0.24.1
 PyHamcrest==1.9.0
+pyparsing==2.3.1
+python-dateutil==2.8.0
 python-engineio==3.4.3
 python-socketio==3.1.2
 pytz==2018.9
+PyYAML==3.13
 redis==3.2.0
 requests==2.21.0
+scikit-learn==0.20.3
+scipy==1.2.1
 six==1.12.0
 Twisted==18.9.0
 txaio==18.8.1
